--- a/index.html
+++ b/index.html
@@ -424,26 +424,22 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">Machine Learning</h3>
                                     <br>
-                                    <h4>Understanding recidivism: a Logistic Regression model for clasifying new offenses</h4>
+                                    <h4>Modeling bank default: making machine learning interpretable</h4>
                                     <p>
-                                        The aim is to predict new offenses committed by offenders based on their previous offense, 
-                                        the type of release (parole, parole to detainer, etc), and demographical features of the offender 
-                                        (age, sex, race/ethnicity, etc) in Iowa, USA. <strong>Scikit-Learn</strong> was used. Logistic Regression, Decision Tree and Random Forest models were explored. 
-                                        Hyperparameter tuning was performed. 
+                                        This repo explores Logistic Regression and Neural Networks to model bank default using Sklearn, Keras and Tensorflow. 
+                                        It also explores interpretability with <strong>SHAP values</strong>.                            
                                     </p>
-                                    <h4>Analysis of credit card patterns: K-Means Clustering and linear Regression Model</h4>
+                                    <h6>Explore this project in
+                                        <a href="https://github.com/svaldess/modeling_bank_default" target="_blank">Github</a>.
+                                    </h6>
+                                    <br>
+                                    <h4>Machine Learngin Dossier:</h4>
                                     <p>
-                                        In this notebook I identify clusters of credit card users, using <strong>K-means clustering and Principal Components Analysis</strong>. This is useful for creating better market strategies targeting particular clusters of consumers.
-                                        Then, using a <strong>Linear Regression model with Ridge regularization</strong>, I predict the amount of payments done by the users, based on features the account balance, how frequently the balance is updated, the frequency and amount of purchases on the account, 
-                                        the credit card limit, among other features. <strong>Scikit-Learn</strong> was used. 
+                                        Other projects include: an Analysis of credit card using <strong>K-Means Clustering</strong> 
+                                        and <strong>Principal Components Analysis</strong>; prediction of recidivism with <strong>Logistic Regression</strong>; 
+                                        prediction of temperature with <strong>Linear Regression</strong>.
                                     </p>
-                                    <h4>Predicting temperature with Linear Regression</h4>
-                                    <p>
-                                        Here I explore the possibility of predicting the temperature in a given day based on numerical features 
-                                        such as precipitation, humidity, wind speed, among others. 
-                                        Hyperparameter tuning is used to compare the prediction given by regression models with different types 
-                                        regularization: Lasso, Ridge and Elastic Net. <strong>Scikit-Learn</strong> was use for this project. 
-                                    </p>
+
                                     <h6>Explore my projects in
                                         <a href="https://github.com/svaldess/Machine_Learning_dossier" target="_blank">Github</a>.
                                     </h6>
