--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Machine Learning</div>
                                 <br>
-                                <div class="portfolio-caption-subheading text-muted">Scikit-Sklearn | Tensorflow</div>
+                                <div class="portfolio-caption-subheading text-muted">Scikit-Sklearn | Tensorflow  | Keras</div>
                             </div>
                         </div>
                     </div>
@@ -433,7 +433,7 @@
                                         <a href="https://github.com/svaldess/modeling_bank_default" target="_blank">Github</a>.
                                     </h6>
                                     <br>
-                                    <h4>Machine Learngin Dossier:</h4>
+                                    <h4>Machine Learning Dossier:</h4>
                                     <p>
                                         Other projects include: an Analysis of credit card using <strong>K-Means Clustering</strong> 
                                         and <strong>Principal Components Analysis</strong>; prediction of recidivism with <strong>Logistic Regression</strong>; 
