--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Sandra Valdes Salas</div>
-                <div class="masthead-subheading">A data scientist with a curious mind.</div>
+                <div class="masthead-subheading">A data scientist with a curious and creative mind.</div>
                 <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#cv">Project 1</a>-->
                 
             </div>
@@ -52,7 +52,7 @@
                     <h2 class="section-heading text-uppercase">About Me</h2>
                     <br>
                     <p>
-                        I am a creative and fast learner data scientist, who loves solving problems and extracting useful knowledge from data. I am currently a graduate student pursuing 
+                        I am a proactive and fast learner data scientist, who loves solving problems and extracting useful knowledge from data. I am currently a graduate student pursuing 
                         a <strong>M.S. in Data Science</strong> (George Washington University). I have working experience in project management, consulting, qualitative research and data analysis
                         for business operations, risk analysis and social impact projects. I have strong programming skills in <strong>Python</strong> and <strong>R</strong> and knowledge 
                         in <strong>Machine Learning, Data Mining</strong>, and <strong>Bayesian methods</strong>. I have excellent <strong>communication and visualization</strong> skills and I am 
