--- a/index.html
+++ b/index.html
@@ -248,19 +248,30 @@
                                     <br>
                                     <h4>Poverty trends in Mexico: before and after COVID-19</h4>
                                     <p>
-                                        This project visualizes statistics of poverty and access to health services in Mexico (2008-2018). 
+                                        This project visualizes statistics of poverty in Mexico (2008-2018). 
                                         Epidemiology statistics of COVID-19 from January 1st, 2020 to July 1st, 2020, were included to gain insights about the social effects of the pandemic. 
-                                        The data preprocessing, cleaning, and consolidation was done in Python 3.7.6. 
                                         <strong>D3 Java Script Library</strong> and <strong>Tableau Public</strong> were used for creating the visualizations.
                                         <br>
                                         <strong>Check out this 
                                             <a href="https://svaldess.github.io/poverty-and-covid-mexico/" target="_blank">project</a>.
                                         </strong>
                                     </p>  
-                                    <br>          
+                                    <br> 
+                                    <h4>Military, health and education expenditure of G20</h4>
+                                    <p>
+                                        This project takes a look  
+                                        at the major trends of the G20 economies with regards to expenditure on military, health, and education between 2010 and 2017 and attempts to
+                                        understand which can be the main drivers of growth during this decade.
+                                        <strong>Google API charts</strong> was mainly used.
+                                        <br>
+                                        <strong>Check out this 
+                                            <a href="https://svaldess.github.io/G20/" target="_blank">project</a>.
+                                        </strong>
+                                    </p>  
+                                    <br> 
                                     <h4>Homicides in Mexico</h4>
                                     <p>
-                                        Animated bar chart race that shows the top 8 states with the largest number of homicides.
+                                        Animated bar chart race that shows the top 8 states with the largest number of homicides in 2020.
                                         The chart was built using <strong>D3 Javascript Library</strong>.
                                         <br>
                                         <strong>Check out this 
