--- a/index.html
+++ b/index.html
@@ -269,6 +269,22 @@
                                         </strong>
                                     </p>  
                                     <br> 
+                                    <h4>Animated graphs</h4>
+                                    <p>
+                                        Some of my animated charts built with <strong>D3 Javascript Library</strong> are: 
+                                        <br> 
+                                        Bar chart that shows the top 8 states with the largest number of homicides in 2020. 
+                                        <strong>Check out this 
+                                            <a href="https://svaldess.github.io/15-years-of-homicides-mexico/" target="_blank">graph</a>.
+                                        </strong>
+                                        Multi-series line chart that displays the economic effects of the pandemic in Mexico 
+                                       
+                                        <strong>Check out this 
+                                            <a href="https://svaldess.github.io/economia_mexico/" target="_blank">graph</a>.
+                                        </strong>
+                                       
+                                    </p>
+                                    <br> 
                                     <h4>Homicides in Mexico</h4>
                                     <p>
                                         Animated bar chart race that shows the top 8 states with the largest number of homicides in 2020.
